h3 fix and megaphone madness

--- a/app/styles/home-page.scss
+++ b/app/styles/home-page.scss
@@ -326,8 +326,6 @@
 
 }
 
-
-
   .callToAction-rightCall {
     background-color: get-color(teal, .2);
     flex: 4 auto;
@@ -339,15 +337,11 @@
 
     h3 {
       color: get-color(black, .7);
+      display: flex;
+      font-family: inherit;
+      text-transform: uppercase;
+      font-weight: 600;
     }
-
-  h3 {
-    display: flex;
-    font-family: inherit;
-    color: get-color(black);
-    text-transform: uppercase;
-    font-weight: 600;
-  }
 
   .callToAction-body {
     flex: 1;
@@ -371,73 +365,121 @@
     }
   }
 
-
-.home-page-callToAction {
-  margin: 0;
-  padding: 0;
+.home-page-megaphone {
   display: flex;
-  flex-flow: column;
+  align-items: center;
 
-}
-
-.home-page-callToAction-header {
-  padding: 20px 0;
-
-  h1 {
-    text-align: center;
-    font-size: 54px;
-    letter-spacing: 4px;
-  }
-  h2 {
-    font-size: 32px;
-    font-weight: 200;
-    text-align: center;
-  }
-  .QOD {
-    color: get-color(teal4);
-    margin: 16px 0;
-    font-size: 24px;
-    font-weight: 100;
-    text-align: center;
+  img {
+    height: 240px;
+    margin: 24px 0 0 16px;
   }
 }
 
-.home-page-callToAction-body {
-  display: flex;
-  flex-flow: row;
+.home-page-megaphone-triangle,
+.home-page-megaphone-text {
+  //border: solid 3px get-color(gray5);
+  //width: 50px;
+  //height: 50px;
 }
 
-.home-page-callToAction-body-call {
-  padding: 16px;
-  display: flex;
-  flex-flow: column;
-  justify-content: space-between;
+.home-page-megaphone-triangle {
+  position: relative;
+  margin: -80px;
 
-  &.leftCall {
-    flex: 6;
-    background-color: get-color(teal);
-  }
+  .home-page-megaphone-triangle-border {
+    width: 0;
+    height: 0;
+    border-left: 100px solid transparent;
 
-  &.rightCall {
-    flex: 4;
-    background-color: rgba(255,255,255, 0.3);
     position: relative;
-    &:after {
-      content: "";
+
+    &.grey {
+      border-bottom: 100px solid get-color(gray3);
+    }
+
+    &.white {
+      border-bottom: 100px solid get-color(white);
       position: absolute;
-      top: 0;
-      bottom:0;
-      left: 100%;
-      width: 100vw;
-      background-color: rgba(255,255,255, 0.3);
-      display: block;
+      top: -4px;
+      left: 10px;
+    }
+  }
+}
+
+//.home-page-megaphone-text {
+//  border: 4px solid get-color(gray3);
+//  min-height: 300px;
+//}
+
+
+
+
+  .home-page-callToAction {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-flow: column;
+
+  }
+
+  .home-page-callToAction-header {
+    padding: 20px 0;
+
+    h1 {
+      text-align: center;
+      font-size: 54px;
+      letter-spacing: 4px;
+    }
+    h2 {
+      font-size: 32px;
+      font-weight: 200;
+      text-align: center;
+    }
+    .QOD {
+      color: get-color(teal4);
+      margin: 16px 0;
+      font-size: 24px;
+      font-weight: 100;
+      text-align: center;
     }
   }
 
-  header {
+  .home-page-callToAction-body {
     display: flex;
+    flex-flow: row;
   }
-}
+
+  .home-page-callToAction-body-call {
+    padding: 16px;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+
+    &.leftCall {
+      flex: 6;
+      background-color: get-color(teal);
+    }
+
+    &.rightCall {
+      flex: 4;
+      background-color: rgba(255, 255, 255, 0.7);
+      position: relative;
+      &:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 100%;
+        width: 100vw;
+        background-color: rgba(255, 255, 255, 0.7);
+        display: block;
+      }
+    }
+
+    header {
+      display: flex;
+    }
+  }
 
 
 
